--- a/CarProject 2.0/Login.xaml
+++ b/CarProject 2.0/Login.xaml
@@ -20,7 +20,7 @@
                 <ColumnDefinition Width="20*" />
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="5">
-                <StackPanel Orientation="Vertical" Height="221">
+                <StackPanel Orientation="Vertical" Height="221" Background="White">
 
                     <Label Grid.Column="1" Content="LOGIN" Height="48" FontSize="24"/>
 
@@ -34,7 +34,7 @@
                         <PasswordBox x:Name="txtPassword" Width="290" />
                     </StackPanel>
 
-                    <Button Content="Anmelden" Click="Login_Click" HorizontalAlignment="Center" Margin="0,10,0,0" />
+                    <Button Content="Login" Click="Login_Click" HorizontalAlignment="Center" Margin="0,10,0,0" />
                     <TextBlock x:Name="txtMessage" TextWrapping="Wrap" HorizontalAlignment="Center" />
                 </StackPanel>
             </StackPanel>
