--- a/CarProject 2.0/MainWindow.xaml
+++ b/CarProject 2.0/MainWindow.xaml
@@ -72,15 +72,45 @@
 
 
 
+                <!--INVISIBLE   CAR   STACK PANEL-->
+                <StackPanel Grid.Column="1" VerticalAlignment="Bottom">
+
+
+                    <StackPanel Name="panelRedCar" Visibility="Visible" VerticalAlignment="Bottom">
+                        <Image Source="C:\Users\Student\Documents\IMS\Car\CarProject 2.0\img\carRed.png" Height="361" Width="495" />
+                        <Button x:Name="redCarButton1" Content="Selcet" FontSize="20" FontWeight="Bold" Foreground="White" BorderBrush="#FF092033" Background="#FF092033" Width="118" Height="38" Margin="20,10,30,10" HorizontalAlignment="Center" Click="redCarButton1_Click"/>
+                    </StackPanel>
+
+                    <StackPanel Name="panelBlueCar" Visibility="Collapsed" VerticalAlignment="Bottom">
+                        <Image Source="C:\Users\Student\Documents\IMS\Car\CarProject 2.0\img\carBlue.png" Height="258" Width="495" />
+                        <Button x:Name="bluCarButton2" Content="Selcet" FontSize="20" FontWeight="Bold" Foreground="White" BorderBrush="#FF092033" Background="#FF092033" Width="118" Height="38" Margin="20,10,30,10" HorizontalAlignment="Center" Click="bluCarButton2_Click"/>
+                    </StackPanel>
+
+                    <StackPanel Name="panelLamboCar" Visibility="Collapsed" VerticalAlignment="Bottom">
+                        <Image Source="C:\Users\Student\Documents\IMS\Car\CarProject 2.0\img\carLambo.png" Height="246" Width="483" />
+                        <Button x:Name="lamboCarButton3" Content="Selcet" FontSize="20" FontWeight="Bold" Foreground="White" BorderBrush="#FF092033" Background="#FF092033" Width="118" Height="38" Margin="20,10,30,10" HorizontalAlignment="Center" Click="lamboCarButton3_Click"/>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Height="32" HorizontalAlignment="Center">
+                        <RadioButton x:Name="redCarButton" Height="40" Width="30" Checked="redCarButton_Checked" />
+                        <RadioButton x:Name="blueCarButton" Height="40" Width="30" Checked="blueCarButton_Checked"/>
+                        <RadioButton x:Name="lamboCarButton" Height="40" Width="30" Checked="lamboCarButton_Checked" />
+                    </StackPanel>
+
+                </StackPanel>
+
+
+
+
 
                 <!--Invisibility-->
-                <StackPanel Grid.Column="2" Name="teststackPanel">
+                <StackPanel Grid.Column="2" Name="teststackPanel" HorizontalAlignment="Left" Width="526" Margin="68,0,0,0">
                     <DockPanel Height="71" LastChildFill="False" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Button Name="buttonEngine" Content="Engine" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3" Click="buttonEngine_Click" />
                         <Button Name="buttonSpoiler" Content="Spoiler" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3" Click="buttonSpoiler_Click"/>
-                        <Button Name="buttonBreaks" Content="Breaks" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3"/>
-                        <Button Name="buttonTires" Content="Tires" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3"/>
-                        <Button Name="buttonNitrous" Content="Nitrous" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3"/>
+                        <Button Name="buttonBrake" Content="Brakes" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3" Click="buttonBrake_Click"/>
+                        <Button Name="buttonTires" Content="Tires" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3" Click="buttonTires_Click"/>
+                        <Button Name="buttonNitrous" Content="Nitrous" FontSize="15" FontWeight="Bold" Foreground="White" BorderBrush="Transparent" Background="#FF407CAE" DockPanel.Dock="Left" Width="100" Height="46" BorderThickness="3" Click="buttonNitrous_Click"/>
                     </DockPanel>
 
                     <!--INVISIBLE   ENGINE   STACK PANEL-->
@@ -88,24 +118,24 @@
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
                                 <Image Source="\img\redEngine.png" Width="141" />
-                        </Label>
-                        <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">EDGY ENGINE</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                        <Button Content="BUY" Name="oneone" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="oneone_Click" />
-                    </DockPanel>
-                    <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
-                        <Label>
+                            </Label>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">EDGY ENGINE</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <Button Content="BUY" Name="engine1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine1_Click" />
+                        </DockPanel>
+                        <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
+                            <Label>
                                 <Image Source="/img/ferrariEngine.png" Width="141" />
-                        </Label>
-                        <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
-                        <Button Content="BUY" Name="onetwo" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="onetwo_Click" />
-                    </DockPanel>
-                    <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
-                        <Label>
+                            </Label>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
+                            <Button Content="BUY" Name="engine2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine2_Click" />
+                        </DockPanel>
+                        <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
+                            <Label>
                                 <Image Source="/img/silverEngine.png" Width="141" />
-                        </Label>
-                        <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
-                        <Button Content="BUY" Name="onethree" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="onethree_Click" />
-                    </DockPanel>
+                            </Label>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
+                            <Button Content="BUY" Name="engine3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine3_Click" />
+                        </DockPanel>
                     </StackPanel>
 
 
@@ -116,7 +146,7 @@
                                 <Image Source="\img\spoilerBlack.png" Width="141" />
                             </Label>
                             <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                            <Button Content="BUY" Name="twoone" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="twoone_Click" />
+                            <Button Content="BUY" Name="spoiler1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler1_Click" />
                         </DockPanel>
 
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
@@ -124,7 +154,7 @@
                                 <Image Source="\img\spoilerSilver.png" Width="141" />
                             </Label>
                             <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                            <Button Content="BUY" Name="twotwo" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="twotwo_Click" />
+                            <Button Content="BUY" Name="spoiler2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler2_Click" />
                         </DockPanel>
 
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
@@ -132,7 +162,7 @@
                                 <Image Source="\img\spoilllyspoiler.png" Width="141" />
                             </Label>
                             <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                            <Button Content="BUY" Name="twothree" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="twothree_Click" />
+                            <Button Content="BUY" Name="spoiler3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler3_Click" />
                         </DockPanel>
                     </StackPanel>
 
@@ -219,9 +249,8 @@
                             <Button Content="BUY" Name="nitrous3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="nitrous3_Click"/>
                         </DockPanel>
                     </StackPanel>
-
-
                 </StackPanel>
+
 
             </Grid>
 
