Finished without Test

--- a/CarProject 2.0/MainWindow.xaml
+++ b/CarProject 2.0/MainWindow.xaml
@@ -165,49 +165,49 @@
                             <Label>
                                 <Image Source="\img\redEngine.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">EDGY ENGINE</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="Edgy Engine"/><LineBreak/><Run Text="+5 Po"/><Run Language="de-ch" Text="wer"/><LineBreak/><Run Language="de-ch"/><LineBreak/><Run Text="Price: 1'500"/></TextBlock>
                             <Button Content="BUY" Name="engine1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine1_Click" />
                         </DockPanel>
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
                             <Label>
                                 <Image Source="/img/ferrariEngine.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="Enginus Maximus"/><LineBreak /><Run Text="+10 Power"/><LineBreak /><Run Text="+5 Acceleration"/><LineBreak /><Run Text="Price: 17'000"/></TextBlock>
                             <Button Content="BUY" Name="engine2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine2_Click" />
                         </DockPanel>
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="449">
                             <Label>
                                 <Image Source="/img/silverEngine.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="EDGY ENGINE"/><LineBreak /><Run Text="+5 Power"/><LineBreak /><Run Text="-2 acceleration"/><LineBreak /><Run Text="Price: 1'500"/></TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"><Run FontWeight="Bold" Text="Edgy Engine Pro Max"/><LineBreak /><Run Text="+20 Power"/><LineBreak /><Run Text="+10 Acceleration"/><LineBreak /><Run Text="Price: 28'000"/></TextBlock>
                             <Button Content="BUY" Name="engine3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="engine3_Click" />
                         </DockPanel>
                     </StackPanel>
 
 
                     <!--INVISIBLE   SPOILER   STACK PANEL-->
-                    <StackPanel Name="panelSpoiler" Visibility="Visible">
+                    <StackPanel Name="panelSpoiler" Visibility="Collapsed">
+                        <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
+                            <Label>
+                                <Image Source="\img\spoilllyspoiler.png" Width="141" />
+                            </Label>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily Spoiler</Run> <LineBreak /> +5 Performance <LineBreak /> -10 Power <LineBreak /> Price: 1'000</TextBlock>
+                            <Button Content="BUY" Name="spoiler1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler1_Click" />
+                        </DockPanel>
+
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
                                 <Image Source="\img\spoilerBlack.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                            <Button Content="BUY" Name="spoiler1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler1_Click" />
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoilerus Maximus</Run> <LineBreak /> +10 Performance <LineBreak /> -15 Power <LineBreak /> Price: 15'000</TextBlock>
+                            <Button Content="BUY" Name="spoiler2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler2_Click" />
                         </DockPanel>
 
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
                                 <Image Source="\img\spoilerSilver.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
-                            <Button Content="BUY" Name="spoiler2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler2_Click" />
-                        </DockPanel>
-
-                        <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
-                            <Label>
-                                <Image Source="\img\spoilllyspoiler.png" Width="141" />
-                            </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily SPOILER</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="90" FontSize="13"> <Run FontWeight="Bold">Spoily Spoiler Pro Max</Run> <LineBreak /> +25 Performance <LineBreak /> +10 Speering <LineBreak/> -15 Power <LineBreak /> Price: 30'000</TextBlock>
                             <Button Content="BUY" Name="spoiler3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="spoiler3_Click" />
                         </DockPanel>
                     </StackPanel>
@@ -217,9 +217,9 @@
                     <StackPanel Name="panelBrake" Visibility="Collapsed">
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
-                                <Image Source="\img\brakeBlack.png" Width="141" />
+                                <Image Source="\img\brakeSilver.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily BRAKES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Breaky Brakes</Run> <LineBreak /> +5 Performance <LineBreak />  <LineBreak /> Price: 4'000</TextBlock>
                             <Button Content="BUY" Name="brake1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="brake1_Click"/>
                         </DockPanel>
 
@@ -227,15 +227,15 @@
                             <Label>
                                 <Image Source="\img\brakeRed.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily BRAKES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Breakus Maximus</Run> <LineBreak /> +10 Performance <LineBreak />  <LineBreak /> Price: 16'000</TextBlock>
                             <Button Content="BUY" Name="brake2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="brake2_Click"/>
                         </DockPanel>
 
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
-                                <Image Source="\img\brakeSilver.png" Width="141" />
+                                <Image Source="\img\brakeBlack.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily BRAKES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Breaking King</Run> <LineBreak /> +15 Performance <LineBreak />  <LineBreak /> Price: 45'000</TextBlock>
                             <Button Content="BUY" Name="brake3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="brake3_Click"/>
                         </DockPanel>
                     </StackPanel>
@@ -245,9 +245,9 @@
                     <StackPanel Name="panelTires" Visibility="Collapsed">
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
-                                <Image Source="\img\tiresBlue.png" Width="141" />
+                                <Image Source="\img\tiresNormal.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily TIRES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Tired Tires</Run> <LineBreak /> +10 Grip <LineBreak /> +5 Performance <LineBreak /> Price: 2'000</TextBlock>
                             <Button Content="BUY" Name="tires1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="tires1_Click"/>
                         </DockPanel>
 
@@ -255,27 +255,27 @@
                             <Label>
                                 <Image Source="\img\tiresFer.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily TIRES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Tied Tired Tires</Run> <LineBreak /> +15 Grip <LineBreak /> +10 Performance <LineBreak /> Price: 15'000</TextBlock>
                             <Button Content="BUY" Name="tires2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="tires2_Click"/>
                         </DockPanel>
 
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
-                                <Image Source="\img\tiresNormal.png" Width="141" />
+                                <Image Source="\img\tiresBlue.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Spoily TIRES</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">Tired Tied Pro Max Tires</Run> <LineBreak /> +20 Grip <LineBreak /> +15 Performancen <LineBreak /> Price: 30'000</TextBlock>
                             <Button Content="BUY" Name="tires3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="tires3_Click"/>
                         </DockPanel>
                     </StackPanel>
 
 
                     <!--INVISIBLE   NIRTOUS   STACK PANEL-->
-                    <StackPanel Name="panelNitrous" Visibility="Collapsed">
+                    <StackPanel Name="panelNitrous" Visibility="Visible">
                         <DockPanel Margin="10" Height="91" Background="#FF7A6F63" Width="450">
                             <Label>
                                 <Image Source="\img\20p.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">20% OF NIRTOUS</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">20% of Pure Nitrous</Run> <LineBreak /> +20 Nitrous <LineBreak />  <LineBreak /> Price: 2'000</TextBlock>
                             <Button Content="BUY" Name="nitrous1" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="nitrous1_Click"/>
                         </DockPanel>
 
@@ -283,7 +283,7 @@
                             <Label>
                                 <Image Source="\img\60p.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">60% OF NIRTOUS</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">60% Of Pure Nitrous</Run> <LineBreak /> +60 Nitrous <LineBreak />  <LineBreak /> Price: 6'000</TextBlock>
                             <Button Content="BUY" Name="nitrous2" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="nitrous2_Click"/>
                         </DockPanel>
 
@@ -291,7 +291,7 @@
                             <Label>
                                 <Image Source="\img\100p.png" Width="141" />
                             </Label>
-                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">100% OF NIRTOUS</Run> <LineBreak /> +5 Power <LineBreak /> -2 acceleration <LineBreak /> Price: 1'500</TextBlock>
+                            <TextBlock TextAlignment="Center" Width="153" Foreground="White" Background="#FF7A6F63" Height="77" FontSize="13"> <Run FontWeight="Bold">100% Of Pure Nitrous</Run> <LineBreak /> +100 Nitrous <LineBreak />  <LineBreak /> Price: 10'000</TextBlock>
                             <Button Content="BUY" Name="nitrous3" Width="87" Height="45" Background="#FF407CAE" Foreground="White" FontWeight="Bold" FontSize="22" Click="nitrous3_Click"/>
                         </DockPanel>
                     </StackPanel>
